--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header {
     align-items: center;
     padding: 0px 40px;
     height: 90px;
-    border: 1px solid #e6ddd7;
+    border: 1px solid #ddd7d3;
 
     position: fixed;
     top: 0;
