--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav a:hover{
     background: rgba(164,106,63,0.06);
 }
 .hero{position:relative;height:90vh;}
-.slider{height:100%;overflow:hidden;position:relative;}
+.slider{height:100%;overflow:hidden;position:relative;border-radius: 20px;}
 .slide{position:absolute;width:100%;height:100%;object-fit:cover;opacity:0;transition:1s;}
 .slide.active{opacity:1;}
 .prev,.next{position:absolute;top:50%;background:none;border:none;font-size:40px;cursor:pointer;color:white;}
